src/components/home/MainSection.module.css
.container {
  position: relative;
  width: 100%;
  min-height: calc(100svh - 80px);
  margin-top: 80px;

  padding-top: 100px;
  padding-bottom: 20px;

  overflow: hidden;
}

.background {
  object-fit: cover;
  object-position: top center;
  z-index: 0;
}

.overlay {
  position: absolute;
  inset: 0;
  background: rgba(255, 255, 255, 0.92);
  z-index: 1;
}

.content {
  position: relative;
  z-index: 2;

  max-width: 1180px;
  margin: 0 auto;

  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: clamp(40px, 8vw, 94px);
  padding: 0 clamp(20px, 5vw, 0px);
}

.leftSection {
  display: flex;
  flex-direction: column;
  gap: clamp(40px, 6vw, 80px);

  flex: 1; /* 공간 유연하게 차지 */
  min-width: 0; /* Flexbox 버그 방지 */
}

.textGroup {
  display: flex;
  flex-direction: column;
  gap: clamp(24px, 4vw, 40px);
}

.sloganDesktop {
  max-width: 594px;
}

.sloganMobile {
  display: none;
}

.description {
  color: var(--gray-800);
  font-size: clamp(14px, 2.3vw, 24px);
  font-weight: 500;
  line-height: 160%;
  white-space: pre-line;
}

.buttonGroup {
  display: flex;
  gap: 10px;
}

.storeBtn {
  display: flex;
  width: clamp(140px, 20vw, 180px);
  height: clamp(48px, 6.5vw, 54px);
  padding-block: clamp(12px, 1.8vw, 16px);
  padding-inline: clamp(20px, 3.2vw, 32px);
  justify-content: center;
  align-items: center;
  gap: 10px;

  border-radius: 8px;
  border: 1px solid #ff6700;
  background: #ff6700;

  font-size: clamp(14px, 1.9vw, 15px);
  font-weight: 500;
  color: var(--white);

  cursor: pointer;
  transition: background-color 0.2s;

  white-space: nowrap;
  flex-wrap: nowrap;
}

.storeBtn:hover {
  background-color: #ff8533;
  border-color: #ff8533;
}

.mockupWrapper {
  flex: 1;
  display: flex;
  justify-content: center;
  /* 목업 이미지가 너무 커지지 않도록 제한 */
  max-width: 522px;
}

@media (max-width: 768px) {
  .container {
    height: auto;
    min-height: auto;

    text-align: center;
    margin-top: 56px;

    padding-top: 20px;
    padding-bottom: 60px;
  }

  .content {
    flex-direction: column;
    gap: 32px;
  }

  .leftSection {
    align-items: center;
    width: 100%;
    gap: 32px;
  }

  .sloganDesktop {
    display: none;
  }

  .sloganMobile {
    margin-top: 48px;
    display: block;
    width: 100%;
    max-width: 300px;
  }

  .textGroup {
    align-items: center;
  }

  .buttonGroup {
    justify-content: center;
    width: 100%;
  }

  .mockupWrapper {
    width: 100%;
    max-width: 320px;
  }
}

